<resources>
    <string name="app_name">Aeropendulo-Lab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--BottomBar-->
    <string name="settings">Ajustes</string>
    <string name="experiment">Experimento</string>
    <string name="reports">Reportes</string>

    <!--Informacion del Home-->
    <string name="info1">info1</string>
    <string name="info2">info2</string>
    <string name="info3">info3</string>

    <!--Informacion de experimento-->
    <string name="remote_supervisor">Supervisor remoto</string>
    <string name="reference_signal">Señal de referencia</string>
    <string name="experiment_time">Tiempo de experimento</string>
    <string name="defect_experiment_time">60 seg</string>
    <string name="sampling_time">Tiempo de muestreo</string>
    <string name="open_loop">Lazo abierto</string>
    <string name="closed_loop">Lazo cerrado</string>
    <string name="control_strategy">Estrategia de control</string>
    <string name="proportional_gain">Kp</string>
    <string name="integral_gain">Ti</string>
    <string name="derivative_gain">Td</string>
    <string name="ts_control">Ts</string>
    <string name="start_experiment">Empezar experimento</string>
    <string name="save_settings">Guardar configuración</string>
    <string name="load_settings">Cargar configuración</string>
    <string name="experiment_name">Nombre del experimento</string>
    <string name="section_experiment_configuration">Configuración del Experimento</string>
    <string name="section_experiment_parameters">Parámetros del Experimento</string>
    <string name="section_input_configuration">Configuración de Entrada</string>
    <string name="section_control_strategy">Estrategia de Control</string>
    <string name="section_test">Pruebas y alarmas</string>
    <string name="bottom_exp_load">Cargar</string>
    <string name="bottom_exp_save">Guardar</string>




    <string name="constant_input">Constante</string>
    <string name="sine_input">Senoidal</string>
    <string name="amplitude">Amplitud:</string>
    <string name="frequency">Frecuencia:</string>
    <string name="hint_kp">Valor de Kp</string>
    <string name="hint_ti">Valor de Ti</string>
    <string name="hint_td">Valor de Td</string>
    <string name="hint_ts">Valor de Ts</string>
    <string name="sinusoidal_input">Senoidal</string>





</resources>